Completed Assignment of Responsive Landing Page.

--- a/May/Week-2/Assignment-1/Landing Page/index.html
+++ b/May/Week-2/Assignment-1/Landing Page/index.html
@@ -4,12 +4,491 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Mulish:wght@300;400;600;700;800;900&display=swap" rel="stylesheet">   
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"/>
     <title>Landing Page</title>
+    <style>
+    body {
+    font-family: "Mulish", sans-serif;
+    margin: 0;
+    padding: 0%;
+  }
+ /* navbar section */
+ .navbar {
+  position: fixed;
+  top: 0%;
+  box-shadow: 0px 0px 8px rgb(0 0 0 / 6%);
+  width: 100%;
+  background-color: #fff;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  z-index: 1000;
+}
+.logo h1 {
+  margin-left: 20px;
+  padding: 1% 2%;
+  font-size: 28px;
+  font-weight: 900;
+  color: #1d263a;
+}
+.nav-items ul {
+  list-style-type: none;
+  font-family: "Lato", sans-serif;
+  font-weight: 800;
+  margin-top: 0%;
+}
+
+.nav-items li {
+  float: left;
+}
+
+.nav-items li a {
+  display: block;
+  padding: 25px;
+  background-color: #fff;
+  text-decoration: none;
+  color: #1d263a;
+}
+
+
+/* banner section */
+.container {
+  width: 80%;
+  display: block;
+  margin: auto;
+  padding: 4% 0%;
+}
+
+.banner {
+  display: flex;
+  justify-content: space-around;
+  background-color: rgba(250, 229, 218, 0.4);
+  border-radius: 30px;
+  margin: 80px 50px 0px 50px;
+  width: 100%;
+  padding-top: 4%;
+}
+.banner .image {
+  padding: 4% 4%;
+  z-index: 1;
+  position: relative;
+}
+.banner .content {
+  padding: 0% 5%;
+}
+
+.banner .content h4 {
+  font-weight: 600;
+  font-size: 13px;
+  line-height: 22px;
+  letter-spacing: 6px;
+  color:  #ff794d;
+}
+
+.banner .content h2 {
+  line-height: 69px;
+  color:  #1d263a;
+  font-weight: 700;
+  font-size: 62px;
+  letter-spacing: 1px;
+  margin-bottom: 30px;
+}
+
+.banner .content p {
+  font-size: 15px;
+  line-height: 28px;
+  color:  #1d263a;
+  opacity: 0.7;
+}
+
+.content .btn {
+  background-color: #ff794d;
+  color: #fff;
+  font-family: "Lato";
+  font-size: 16px;
+  font-weight: 700;
+  padding: 2% 10%;
+  margin: 2% 0%;
+  border-radius: 30px;
+  border: none;
+  cursor: pointer;
+}
+
+/* feature section */
+.features {
+  border-bottom: 3px dashed #ddd;
+}
+.features .feature-wrapper {
+  display: flex;
+  justify-content: space-around;
+  align-content: center;
+}
+
+.feature-wrapper .feature {
+  padding: 2% 6%;
+  display: flex;
+  align-items: center;
+}
+
+.feature .icon {
+  height: 80px;
+  width: 80px;
+  line-height: 80px;
+  border-radius: 50%;
+  text-align: center;
+  font-size: 31px;
+  padding: 1% 3%;
+}
+
+.feature-1 .icon {
+  color:  #20bfa9;
+  background: rgba(214, 227, 235, 0.4);
+}
+
+.feature-2 .icon {
+  background: rgba(250, 229, 218, 0.4);
+  color:  #ff794d;
+}
+
+.feature-3 .icon {
+  background: rgba(214, 227, 235, 0.4);
+  color: #1687fc;
+}
+
+.feature .content {
+  padding-left: 8%;
+}
+
+.feature .content h2 {
+  font-weight: 800;
+  font-size: 24px;
+  line-height: 32px;
+  letter-spacing: -0.3px;
+  color: #1d263a;
+  margin-bottom: 15px;
+}
+.feature .content p {
+  font-size: 15px;
+  line-height: 28px;
+  color: #1d263a;
+  opacity: 0.8;
+  margin-bottom: 0;
+}
+
+/* gallery section */
+.gallery .images {
+  display: flex;
+  justify-content: space-around;
+  column-gap: 40px;
+  
+}
+.gallery .content h1 {
+  font-size: 42px;
+  line-height: 50px;
+  margin-bottom: 55px;
+  font-weight: 700;
+}
+
+/* video section */
+.video-demo {
+  display: flex;
+  width: 100%;
+}
+.video-demo .content {
+  padding: 200px 100px 200px 315px;
+  background-color: #ff794d;
+  width: 30%;
+}
+
+.video-demo .content h1 {
+  font-size: 42px;
+  line-height: 50px;
+  color: #fff;
+}
+.video-demo .video-content {
+  background: url("https://img.freepik.com/free-photo/selective-focus-african-american-it-employee-with-headset-working-remote-from-home-website-design-using-programming-technologies-computer-programmer-man-coding-digital-business-server_482257-30394.jpg?t=st=1652451457~exp=1652452057~hmac=d1b341ae0b363afd846ea5362a39cf342637af66c7f208bdfcf21accf9be4bee&w=1060");
+  width: 60%;
+  position: relative;
+}
+.video-content .video a {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: #fff;
+}
+
+.video a i {
+  color: #fff;
+  width: 92px;
+  height: 92px;
+  border-radius: 50%;
+  line-height: 92px;
+  text-align: center;
+  background: transparent;
+  border: 3px solid #ffffff;
+}
+
+/* newsletter section */
+.newsletter {
+  text-align: center;
+  width: 30%;
+}
+
+.newsletter .content h1 {
+  font-size: 42px;
+  line-height: 50px;
+  font-weight: 800;
+  letter-spacing: -1px;
+  color: #1d263a;
+  opacity: 0.9;
+}
+
+.newsletter .content p {
+  font-size: 17px;
+  line-height: 30px;
+  color: #1d263a;
+  opacity: 0.7;
+}
+
+.newsletter-form {
+  padding-top: 40px;
+  padding-bottom: 32px;
+}
+.form {
+  display: flex;
+}
+
+.form .form-control {
+  font-family: "Mulish", sans-serif;
+  border-radius: 10px 0px 0px 10px;
+  height: 70px;
+  border: 1px solid rgba(223, 223, 223, 0.7);
+  font-size: 17px;
+  line-height: 30px;
+  padding-left: 28px;
+  width: 80%;
+}
+
+.form .btn {
+  margin-top: 0;
+  min-width: 200px;
+  height: 74px;
+  border-radius: 0px 10px 10px 0px;
+  background: #20bfa9;
+  width: 80%;
+  font-weight: 600;
+  font-size: 13px;
+  line-height: 22px;
+  letter-spacing: 4px;
+  text-transform: uppercase;
+  color: #ffffff;
+  cursor: pointer;
+  border: none;
+}
+
+/* footer section */
+.footer {
+  background-color: rgba(250, 229, 218, 0.4);
+  border-radius: 30px;
+  margin: 20px 60px 0px 50px;
+  width: 95%;
+  padding-top: 4%;
+}
+
+.footer .wrapper {
+  display: flex;
+  justify-content: space-around;
+  padding: 4% 0%;
+  margin: 2% 0%;
+}
+.wrapper .item p {
+  text-transform: uppercase;
+  font-weight: 600;
+  font-size: 13px;
+  line-height: 22px;
+  letter-spacing: 4px;
+  color: #1d263a;
+  font-weight: 700;
+}
+
+.wrapper .item ul {
+  padding: 0%;
+}
+.wrapper .item ul li {
+  font-size: 17px;
+  line-height: 30px;
+  padding: 6% 0%;
+  color: #1d263a;
+  opacity: 0.7;
+  list-style: none;
+  font-weight: 500;
+}
+
+
+@media screen and (min-width: 320px) and (max-width: 480px){
+  .main-container{
+      overflow-x: hidden;
+  }
+  /* navbar section */
+  .navbar{
+      display: flex;
+      flex-direction: column;
+  }
+  .nav-items{
+      display: flex;
+      flex-direction: column;
+      margin-left: 50px;
+  }
+
+  /* banner section */
+  .banner{
+      flex-direction: column;
+      margin: 80px 60px 0px 22px;
+      width: 88%;
+  }
+  .banner .image{
+      padding-left: 35px;
+  }
+  .banner .image img {
+      width: 92%;
+  }
+  .banner .content h2 {
+      line-height: 47px;
+      font-size: 37px;
+      text-align: center;
+  }
+  
+  .banner .content h4 {
+      font-size: 12px;
+      font-weight: 600;
+  }
+  
+  .content .btn {
+      font-size: 14px;
+      padding: 3% 11%;
+  }
+  .features .feature-wrapper{
+      flex-direction: column;
+  }
+  .content .btn{
+      margin: 80px;
+  }
+  .banner .content h1{
+      font-size: 10px;
+      font-weight: 600
+  }
+  
+  .gallery .images {
+      flex-direction: column;
+  }
+
+  .images .grid-item img {
+      width: 100%;
+      margin-bottom: 5%;
+  }
+  .gallery .content h1{
+      font-size: 25px;
+      line-height: 25px;
+      margin-bottom: 25px;
+      font-weight: 800;
+      text-align: center;
+  }
+  .gallery .content h4{
+      text-align: center;
+      font-size: 30px;
+  }
+  .video-demo {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      width: 100%;
+      height: 1000px;
+  }
+  .video-demo .content {
+      padding-right: 10px;
+      padding-left: 10px;
+      height: 4%;
+      display: flex;
+      justify-content: center;
+      width:100vw;
+      text-align: center;
+  }
+  .video-demo .content h1 {
+      margin-right: 20px;
+      font-size: 15px;
+    
+  }
+  .video-demo .video-content {
+      background: url("https://img.freepik.com/free-photo/selective-focus-african-american-it-employee-with-headset-working-remote-from-home-website-design-using-programming-technologies-computer-programmer-man-coding-digital-business-server_482257-30394.jpg?t=st=1652451457~exp=1652452057~hmac=d1b341ae0b363afd846ea5362a39cf342637af66c7f208bdfcf21accf9be4bee&w=1060");
+      width: 100%;
+      padding-bottom: 30px;
+      height: 50%; 
+  }
+  .newsletter{
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      width: 100vw;
+  }
+  .newsletter .content h1{
+      font-size: 30px;
+      line-height: 30px;
+      font-weight: 800;
+      letter-spacing: -1px;
+      opacity: 0.9;
+  }
+  .newsletter .content p{
+      font-size: 17px;
+      line-height: 30px;
+      opacity: 0.7;
+  }
+  .form{
+      display: flex;
+    
+  }
+  .form .btn{
+      margin-top: 0;
+      min-width: 100px;
+      height: 50px;
+      border-radius: 0px 10px 10px 0px;
+      width: 70%;
+      font-weight: 600;
+      font-size: 9px;
+      line-height: 22px;
+      letter-spacing: 4px;
+      text-transform: uppercase;
+      cursor: pointer;
+      border: none;
+  }
+  .form .form-control{
+      height: 48px;
+      font-size: 9px;
+      line-height: 22px;
+      letter-spacing: 4px;
+      padding-right: 50px;
+      font-weight: 700;
+  }
+  .footer{
+      margin: 0;
+      width: 100vw;
+  }
+  .footer .wrapper{
+      flex-direction: column;
+      text-align: center;
+      width: 100%;
+      padding: 0;
+      margin: 0;
+  }
+  }
+
+
+
+    </style>
   </head>
   <body>
     <!-- navbar section -->
